# VKStarter

./: .gitmodules  CMakeLists.txt
src/: common.h  main.cpp
